<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_codigo"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_descripcion"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/et_pre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cod" />

    <EditText
        android:id="@+id/et_pre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_precio"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btn_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_des" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Modificar"
        android:text="@string/btn_modificar"
        app:layout_constraintBottom_toTopOf="@+id/btn_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_busca" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Registrar"
        android:text="@string/btn_registrar"
        app:layout_constraintBottom_toTopOf="@+id/btn_busca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pre" />

    <Button
        android:id="@+id/btn_busca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Buscar"
        android:text="@string/btn_buscar"
        app:layout_constraintBottom_toTopOf="@+id/btn_modificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registro" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Eliminar"
        android:text="@string/btn_eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_modificar" />

</androidx.constraintlayout.widget.ConstraintLayout>